patches-svg/src/snapshots/patches_svg__tests__autosum_collapse.snap
---
source: patches-svg/src/lib.rs
assertion_line: 394
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 390 170" width="390" height="170"><style>.bg{fill:#1e2026;}.node-body{fill:#282c34;stroke:#505a6e;stroke-width:1;}.node-header{fill:#3c465a;}.header-text{fill:#e6e6f0;font:12px sans-serif;}.port-text{fill:#bebec8;font:10px sans-serif;}.input-dot{fill:#64c878;}.input-sum{stroke:#64c878;stroke-width:1.5;stroke-linecap:round;fill:none;}.output-dot{fill:#c88c50;}.cable{fill:none;stroke:#78b4ff;stroke-width:1.5;}.cable-mono{stroke:#78b4ff;}.cable-poly-audio{stroke:#c878b4;stroke-width:2.5;}.cable-poly-transport{stroke:#c8b478;stroke-dasharray:4 2;}.cable-poly-midi{stroke:#78c8b4;stroke-dasharray:1 2;stroke-width:2;}</style><rect class="bg" x="0" y="0" width="390" height="170"/><path class="cable cable-mono" d="M 180 57 C 192 57, 198 97, 210 97"></path><path class="cable cable-mono" d="M 180 137 C 192 137, 198 97, 210 97"></path><g class="node"><rect class="node-body" x="20" y="20" width="160" height="50" rx="4" ry="4"/><path class="node-header" d="M 20 24 Q 20 20 24 20 L 176 20 Q 180 20 180 24 L 180 44 Z L 20 44 Z"/><text class="header-text" x="28" y="36.8">a : Osc</text><circle class="output-dot" cx="174" cy="57" r="3"/><text class="port-text" x="143" y="60.5">sine</text></g><g class="node"><rect class="node-body" x="20" y="100" width="160" height="50" rx="4" ry="4"/><path class="node-header" d="M 20 104 Q 20 100 24 100 L 176 100 Q 180 100 180 104 L 180 124 Z L 20 124 Z"/><text class="header-text" x="28" y="116.8">b : Osc</text><circle class="output-dot" cx="174" cy="137" r="3"/><text class="port-text" x="143" y="140.5">sine</text></g><g class="node"><rect class="node-body" x="210" y="60" width="160" height="50" rx="4" ry="4"/><path class="node-header" d="M 210 64 Q 210 60 214 60 L 366 60 Q 370 60 370 64 L 370 84 Z L 210 84 Z"/><text class="header-text" x="218" y="76.8">mix : Vca</text><path class="input-sum" d="M 212 97 L 220 97 M 216 93 L 216 101"/><text class="port-text" x="223" y="100.5">in</text></g></svg>
