patches-svg/src/snapshots/patches_svg__tests__empty_patch.snap
---
source: patches-svg/src/lib.rs
assertion_line: 169
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1 1" width="1" height="1"><style>.bg{fill:#1e2026;}.node-body{fill:#282c34;stroke:#505a6e;stroke-width:1;}.node-header{fill:#3c465a;}.header-text{fill:#e6e6f0;font:12px sans-serif;}.port-text{fill:#bebec8;font:10px sans-serif;}.input-dot{fill:#64c878;}.input-sum{stroke:#64c878;stroke-width:1.5;stroke-linecap:round;fill:none;}.output-dot{fill:#c88c50;}.cable{fill:none;stroke:#78b4ff;stroke-width:1.5;}.cable-mono{stroke:#78b4ff;}.cable-poly-audio{stroke:#c878b4;stroke-width:2.5;}.cable-poly-transport{stroke:#c8b478;stroke-dasharray:4 2;}.cable-poly-midi{stroke:#78c8b4;stroke-dasharray:1 2;stroke-width:2;}</style><rect class="bg" x="0" y="0" width="1" height="1"/></svg>
