patches-svg/src/snapshots/patches_svg__tests__sample_patch_mono.snap
---
source: patches-svg/src/lib.rs
assertion_line: 176
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 390 90" width="390" height="90"><style>.bg{fill:#1e2026;}.node-body{fill:#282c34;stroke:#505a6e;stroke-width:1;}.node-header{fill:#3c465a;}.header-text{fill:#e6e6f0;font:12px sans-serif;}.port-text{fill:#bebec8;font:10px sans-serif;}.input-dot{fill:#64c878;}.input-sum{stroke:#64c878;stroke-width:1.5;stroke-linecap:round;fill:none;}.output-dot{fill:#c88c50;}.cable{fill:none;stroke:#78b4ff;stroke-width:1.5;}.cable-mono{stroke:#78b4ff;}.cable-poly-audio{stroke:#c878b4;stroke-width:2.5;}.cable-poly-transport{stroke:#c8b478;stroke-dasharray:4 2;}.cable-poly-midi{stroke:#78c8b4;stroke-dasharray:1 2;stroke-width:2;}</style><rect class="bg" x="0" y="0" width="390" height="90"/><path class="cable cable-mono" d="M 180 57 C 192 57, 198 57, 210 57"></path><g class="node"><rect class="node-body" x="20" y="20" width="160" height="50" rx="4" ry="4"/><path class="node-header" d="M 20 24 Q 20 20 24 20 L 176 20 Q 180 20 180 24 L 180 44 Z L 20 44 Z"/><text class="header-text" x="28" y="36.8">osc : Osc</text><circle class="output-dot" cx="174" cy="57" r="3"/><text class="port-text" x="143" y="60.5">sine</text></g><g class="node"><rect class="node-body" x="210" y="20" width="160" height="50" rx="4" ry="4"/><path class="node-header" d="M 210 24 Q 210 20 214 20 L 366 20 Q 370 20 370 24 L 370 44 Z L 210 44 Z"/><text class="header-text" x="218" y="36.8">vca : Vca</text><circle class="input-dot" cx="216" cy="57" r="3"/><text class="port-text" x="223" y="60.5">in</text></g></svg>
